Fix test-compile error